# pinect

./: .gitmodules  CMakeLists.txt  gspca.c  gspca.h  kinect.c  lt.h  pinect.c  pinect.h  readme.md  unload_drivers.sh  util.c  util.h
cmake_modules/: Findlibfreenect.cmake  SetupDirectories.cmake
ffi/lua/: pinect.lua
ffi/py/: pinect.py  test.py  window.py
ffi/py/__pycache__/: _cffi__g6c947968x96d1ed88.c
include/: pinect.h
linux/: Makefile
src/: CMakeLists.txt  pinect-fnt.c  pinect-internal.h  pinect-uvc.c  pinect-v4l.c  pinect.c  pinect.h
